<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".NoiseHuntActivity" >
    
    <TextView
        android:id="@+id/txt_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textSize="@dimen/size_txt_title"
        android:textStyle="bold"
        android:text="@string/txt_noise_hunt_challenge" />
    <Button 
        android:id="@+id/btn_walkinthepark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_challenge"
        android:layout_marginTop="20dp"
        android:background="@drawable/img_btn_hunt_active"
        android:text="@string/txt_noise_hunt_walkinthepark"
        android:textStyle="bold"
        android:textSize="@dimen/size_txt_btn_hunt"></Button>
    <Button 
        android:id="@+id/btn_blitzkrieg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_walkinthepark"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_btn_hunt_inactive"
        android:text="@string/txt_noise_hunt_blitzkrieg"
        android:textStyle="italic"
        android:textSize="@dimen/size_txt_btn_hunt"></Button>
    <Button 
        android:id="@+id/btn_partytime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_blitzkrieg"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_btn_hunt_inactive"
        android:text="@string/txt_noise_hunt_partytime"
        android:textStyle="italic"
        android:textSize="@dimen/size_txt_btn_hunt"></Button>
    <Button 
        android:id="@+id/btn_riverside"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_partytime"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_btn_hunt_inactive"
        android:text="@string/txt_noise_hunt_riverside"
        android:textStyle="italic"
        android:textSize="@dimen/size_txt_btn_hunt"></Button>
    <Button 
        android:id="@+id/btn_trainspotting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_riverside"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_btn_hunt_inactive"
        android:text="@string/txt_noise_hunt_trainspotting"
        android:textStyle="italic"
        android:textSize="@dimen/size_txt_btn_hunt"></Button>
    <Button 
        android:id="@+id/btn_morningglory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_trainspotting"
        android:layout_marginTop="10dp"
        android:background="@drawable/img_btn_hunt_inactive"
        android:text="@string/txt_noise_hunt_morningglory"
        android:textStyle="italic"
        android:textSize="@dimen/size_txt_btn_hunt"></Button>
   

</RelativeLayout>