<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/img_other_profile_picture"
        android:contentDescription="@string/txt_desc_img_other_profile_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/txt_other_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/img_other_profile_picture"
        android:text="@string/txt_other_username"
        android:textSize="@dimen/size_txt_username"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/btn_delete_other_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/txt_other_username"
        android:layout_below="@+id/txt_other_username"
        android:text="@string/txt_btn_delete_friend" />

    <TableLayout
        android:id="@+id/tbl_other_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_other_profile_picture"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:stretchColumns="*" >

        <TableRow
            android:id="@+id/tableRow1_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/txt_other_points_earned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="0dp"
                android:text="@string/txt_other_points_earned"
                android:textSize="@dimen/size_txt_normal" />

            <TextView
                android:id="@+id/txt_other_points_earned_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/txt_other_points_earned_username"
                android:textSize="@dimen/size_txt_normal" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/txt_other_battles_won"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_other_battles_won"
                android:width="0dp"
                android:textSize="@dimen/size_txt_normal" />

            <TextView
                android:id="@+id/txt_other_battles_won_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/txt_other_battles_won_username"
                android:textSize="@dimen/size_txt_normal" />
        </TableRow>
        
        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp" >

            <TextView
                android:id="@+id/txt_other_last_sound_checkin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_last_sound_checkin"
                android:width="0dp"
                android:textSize="@dimen/size_txt_normal" />

            <TextView
                android:id="@+id/txt_other_last_sound_checkin_username"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:text="@string/txt_last_sound_checkin_username"
                android:textSize="@dimen/size_txt_normal" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:id="@+id/tbl_other_badges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tbl_other_profile"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center_horizontal"
        android:weightSum="1">
    </TableLayout>
</RelativeLayout>
</ScrollView>